# infotecs-CXX

./: CMakeLists.txt  README.md
headers/: TCP_Connection.hpp  client.hpp  server.hpp  server_settings.hpp  strmanip.hpp
src/Client/: client.cpp
src/Server/: server.cpp
